@@ -256,6 +256,16 @@ describe 'queries on Rufus::Edo::NetTyrantTable' do
     }.should.satisfy { |q| q.class == Rufus::Edo::TableQuery }
   end
 
+  it 'can be counted' do
+    # testing the mimicking the count function of TT 1.1.19
+
+    q = @t.prepare_query { |q|
+      q.add 'lang', :includes, 'en'
+    }
+    q.run
+    q.count.should.equal(4)
+  end
+
   it 'can be limited' do
 
     @t.query { |q|
