@@ -1,7 +1,11 @@
 
 = rufus-tokyo CHANGELOG.txt
 
+
 == rufus-tokyo - 0.1.12    not yet released
+
+- todo  : mimicking query.count in rufus/edo
+- todo  : implemented query.count (TC 1.4.12 and TT 1.1.20 only) rufus/tokyo
 
 
 == rufus-tokyo - 0.1.11    released 2009/03/25
